# TP-jogosTabuleiro-cpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  SistemaDeJogo.cpp  SistemaDeJogo.hpp
include/: CadastroDeJogadores.hpp  Jogador.hpp  Jogo.hpp  Lig4.hpp  Pontuacao.hpp  Reversi.hpp  Score.hpp  SistemaDeJogo.hpp  Tabuleiro.hpp
src/: .gitignore  CadastroDeJogadores.cpp  CadastroDeJogadores.hpp  Cadastro_de_jogadores.cpp  Cadastro_de_jogadores.hpp  Gerenciamento_de_jogadores.cpp  Gerenciamento_de_jogadores.hpp  Jogador.cpp  Jogador.hpp  Jogo.cpp  Lig4.cpp  Pontuacao.cpp  Reversi.cpp  Score.cpp  SistemaDeJogo.cpp  Tabuleiro.cpp  jogosTabuleiro  main.cpp
testes/: TesteCadastroDeJogadores.cpp  TesteJogador.cpp  jogadores.txt  teste.txt
